# msr-claw

./: .gitignore  LICENSE  MSRCLAW_AGENTS.md  README.md  msrclaw.yaml.example  pyproject.toml
.github/workflows/: ci.yml
docs/: OPENCLAW.md  SCRIPT_LLM.md
msrclaw/: __init__.py  cli.py  config.py  llm.py  mcp_server.py  mock_llm.py  run_service.py
msrclaw/agents/: __init__.py  analysis.py  collector.py  llm_generated_scripts.py  llm_tailoring.py  problem.py  refinement.py  sampler.py  source.py  validity.py  writer.py
msrclaw/codegen/: __init__.py  analysis_script.py  embed.py
msrclaw/pipeline/: __init__.py  gates.py  graph.py  resume_apply.py  state.py  state_coercion.py
msrclaw/sources/: __init__.py  base.py  github.py  registry.py
msrclaw/storage/: __init__.py  provenance.py  workspace.py
skills/msr-claw/: SKILL.md
tests/: test_graph_smoke.py  test_llm_generated_scripts.py  test_mcp_server.py  test_state_coercion.py
